# reqwest-builder-retry-rs

./: Cargo.toml  README.md  reqwest-retry-rs.code-workspace
examples/x-sample/: Cargo.toml
examples/x-sample/src/: main.rs
src/: convenience.rs  error.rs  lib.rs
src/convenience/: json.rs
