[package]
name = "reqwest-builder-retry"
version = "0.1.0"
edition = "2024"
authors = ["aoyagikouhei <aoyagi.kouhei@gmail.com>"]
license = "MIT"
description = "LINE API library."
repository = "https://github.com/aoyagikouhei/reqwest-builder-retry-rs"
keywords = ["reqwest", "retry"]
categories = ["helper"]
readme = "README.md"
documentation = "https://docs.rs/reqwest-builder-retry"

[dependencies]
rand = { version = "0.9", optional = true  }
reqwest = { version = "0.12", default-features = false, optional = true }
thiserror = "2"
tokio = { version = "1", features = ["time"], optional = true  }

[features]
default = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
convenience = ["rand", "tokio"]

[dev-dependencies]
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt"] }
serde_json = "1"