[package]
name = "reqwest-builder-retry"
version = "0.8.0"
edition = "2024"
authors = ["aoyagikouhei <aoyagi.kouhei@gmail.com>"]
license = "MIT"
description = "LINE API library."
repository = "https://github.com/aoyagikouhei/reqwest-builder-retry-rs"
keywords = ["reqwest", "retry"]
readme = "README.md"
documentation = "https://docs.rs/reqwest-builder-retry"

[dependencies]
rand = { version = "0.9", optional = true  }
reqwest = "0.13"
thiserror = "2"
tokio = { version = "1", features = ["time"], optional = true  }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }

[features]
convenience = ["rand", "tokio", "serde", "serde_json"]

[dev-dependencies]
anyhow = "1"
reqwest = { version = "0.13", features = ["json"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt"] }
serde_json = "1"