[package]
name = "x-sample"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
reqwest-builder-retry = { path = "../..", features = ["convenience"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = "0.3"
twapi-v2 = { version = "0.21", features = ["oauth10a"] }

[features]
convenience = []